# cloudformation-guard

./: Cargo.toml
guard/: Cargo.toml
guard-eval/: Cargo.toml
guard-eval/src/: eval.rs  lib.rs  types.rs  value_internal.rs  value_internal_tests.rs
guard-eval/src/eval/: extract_variable_exprs_tests.rs  query_tests.rs  tests_common.rs
guard-eval/src/value_internal/: json_parsing_tests.rs  partial_ord_tests.rs  yaml_parsing_tests.rs
guard-eval/test-resources/: DynamoDB_Table.template  Managed_EC2_and_Spot_Batch_Environment.template
guard-lambda/: README.md
guard-lambda/src/: main.rs
guard-lang/: Cargo.toml
guard-lang/spec/: lang.abnf
guard-lang/src/: exprs.rs  internal.rs  lib.rs  parser.rs  parser_tests.rs  types.rs  visitor.rs
guard-lang/src/rules/: errors.rs  types.rs
guard-lang/src/rules/ast/: exprs.rs  mod.rs  parser_tests.rs  visitor.rs
guard/src/: lib.rs
guard/src/commands/: helper.rs  migrate.rs  migrate_tests.rs  test.rs  validate.rs
guard/src/migrate/: parser.rs  parser_tests.rs
guard/src/rules/: display.rs  errors.rs  eval.rs  eval_context.rs  eval_context_tests.rs  eval_tests.rs  exprs.rs  loader.rs  mod.rs  parser.rs  parser_tests.rs  path_value.rs  types.rs  values.rs
guard/src/rules/ast/: exprs.rs  mod.rs  parser.rs  visitor.rs
guard/src/rules/evaluator/: mod.rs
lang/: Cargo.toml
lang/src/rules/: mod.rs
lang/src/rules/ast/: parser.rs
