[package]
name = "guard-lang"
version = "0.1.0"
authors = ["diwakar <dchakrav-github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
nom_locate = "2.0.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
regex = "1.3.9"
simple_logger = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
