[package]
name = "guard-lang"
version = "2.1.0"
authors = ["diwakar <dchakrav-github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom_locate = "4.0.0"
indexmap = { version = "1.6.0", features = ["serde-1"] }
regex = "1.3.9"
serde = { version = "1.0", features = ["derive"] }
yaml-rust = "0.4.5"
